# Ai-Resume-Screener

./: README.md  dutient-hrs (1).html  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: .env.example  README.md  dutient.db
backend/app/: config.py  database.py  main.py  models.py  parsing.py  schemas.py  scoring.py  tasks.py
frontend/: README.md
frontend/js/: 01-state.js  02-core-ui.js  03-candidates.js  04-bulk-screening.js  05-search-tabs.js  06-email-init.js
