[project]
name = "dutient-ai"
version = "0.1.0"
description = "Dutient Resume Screening API and frontend"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "sqlalchemy==2.0.43",
  "python-multipart==0.0.20",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "python-docx==1.2.0",
  "pypdf==5.9.0"
]
